--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -16,6 +16,15 @@ spring:
       discovery:
         locator:
           enabled: true
+          default-filters:
+            - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials, RETAIN_UNIQUE
+          globalcors:
+            cors-configurations:
+              '[/**]':
+                allowed-origin-patterns: '*'
+                allowed-methods: "*"
+                allowed-headers: "*"
+                allow-credentials: true
       routes:
         - id: proveedor-service
           uri: lb://proveedor-service
